# voronoi_hsi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  static_map.txt
launch/: ar_track.launch  eight_robots.yaml  four_robots.yaml  map_server.launch  map_server.launch~  map_server.yaml  map_server.yaml~  robot_control_info.yaml  simulator.yaml  stdr_sim.launch  three_epuck.launch  three_robots.yaml  topic_info.yaml  twenty_robots.yaml  voronoi_20.launch  voronoi_3.launch  voronoi_3_with_app.launch  voronoi_4.launch  voronoi_4_with_app.launch  voronoi_8.launch  voronoi_8_with_app.launch  voronoi_common.launch  voronoi_hsi.launch  voronoi_params.launch  voronoi_params.launch~  voronoi_params20.launch  voronoi_params3.launch  voronoi_params8.launch
launch/epuck/: epuck0.launch  epuck1.launch  epuck2.launch  epuck3.launch  epuck4.launch  epuck5.launch  epuck6.launch  epuck7.launch  epuck8.launch
msg/: Gaussian.msg  GaussianArray.msg  Matrix2D.msg  RobotGain.msg  RobotGainArray.msg  VoronoiTesselation.msg
rviz/: voronoi.rviz
src/: ControlLaw.py  Graph.py  Node.py  Robot.py  RobotControl.py  Util.py  Voronoi.py  ar_track_to_odom.py  density.txt  density_pub.py  pose_controller_tester.py  sandbox.py  simulator.py  simulator_util.py  voronoi_h.py  voronoi_hsi.py
srv/: SetColorPlot.srv  SetOccGrid.srv  SetRobotPose.srv  SetSurfPlot.srv
worlds/: cave.pgm  cow.pgm  eight_voronoi.world  four_voronoi.world  four_voronoi.world~  rectangle.pgm  room.pgm  room80.pgm  square.pgm  square80.pgm  square800.pgm  three_voronoi.world  twenty_voronoi.world
(+3 files in other folders)
